debugged raft plus added ablity to kill nodes